Fixed the view on smaller screens

--- a/style/home.css
+++ b/style/home.css
@@ -1,5 +1,5 @@
 .hero-section {
-    width: 100vw; 
+    width: 100%;
     background: linear-gradient(to right, black, rgba(30, 60, 114, 0));
     color: white;
     padding: 100px 20px;
@@ -55,9 +55,8 @@
     margin: 0 auto;
 }
 
-
 .cta-section {
-    width: 100vw;
+    width: 100%; 
     background-color: #f1f1f1;
     padding: 80px 20px;
     text-align: center;
